# dagger-modules

./: README.md  dagger.gen.go  dagger.json  main.go
.github/workflows/: bot.yml  ci.yml  ci.yml.disabled
bot/: dagger.gen.go  dagger.json  go.mod  go.sum  main.go
bot/internal/dagger/: dagger.gen.go
ci/: .golangci.yaml  ci.go  dagger.gen.go  dagger.json  go.mod  go.sum  issue_comment.go  main.go
ci/internal/dagger/: dagger.gen.go
docker2dagger/: README.md  dagger.json  dockerfile_example  go.mod  go.sum  main.go
docker2dagger/examples/: dagger.json  go.mod  main.go
github-comment/: dagger.gen.go  dagger.json  github.go  go.mod
hello-world/: dagger.json
hello-world/src/: main.py
inline-python/: dagger.gen.go  dagger.json  main.go
modules/inline-python/: dagger.gen.go  dagger.json
my-new-python-mod/: dagger.json
my-new-python-mod/src/: main.py
nvidia-gpu/: dagger.json  go.mod  main.go
ollama/: dagger.json  go.mod  main.go
remote-dagger/: dagger.gen.go  dagger.json  main.go  ssh.go
smart-changelog/: .gitignore  dagger.json  git.go  github.go  go.mod  go.sum  main.go
smart-module/: .gitignore  dagger.json  pyproject.toml
smart-module/src/main/: __init__.py  module.py  tools.py
snowflake-cli/: .gitignore  dagger.json
snowflake-cli/src/main/: __init__.py
ssh/: dagger.gen.go  dagger.json  main.go
